Fix css issue on small screens

--- a/src/stylesheets/content.scss
+++ b/src/stylesheets/content.scss
@@ -9,7 +9,6 @@
   a {
     color: $blue;
   }
-  width: 100%;
   @media (min-width: $break-large) {
     width: 960px;
   }
